fix: animatecss use, ip alert

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         />
         <meta name="theme-color" content="#4d4d4d" />
         <link rel="stylesheet" href="/src/scss/style.scss" />
+        <script type="module" src="/src/js/script.js"></script>
         <script type="application/ld+json">
             {
               "@context": "https://schema.org",
@@ -108,7 +109,7 @@
                             <i class="fas fa-users"></i> Členi
                         </button></a
                     >
-                    <button onclick="ipalert()" class="btn3">
+                    <button onclick='alert("IP: trospysmp.cz")' class="btn3">
                         <i class="fas fa-location-arrow"></i> IP
                     </button>
                     <a
