feat: button titles

--- a/index.html
+++ b/index.html
@@ -76,22 +76,26 @@
                     <a
                         title="Mapa TrospySMP"
                         href="https://goo.gl/maps/VyU9eK4qkzry3UhLA"
-                        ><button class="btn1">
+                        ><button class="btn1" title="odkaz na mapu">
                             <i class="fas fa-map"></i> Mapu niekto hackol
                         </button></a
                     >
                     <a title="List TrospySMP čenov" href="cleni.html"
-                        ><button class="btn2">
+                        ><button class="btn2" title="členovia trospysmp">
                             <i class="fas fa-users"></i> Členi
                         </button></a
                     >
-                    <button onclick='alert("IP: trospysmp.cz")' class="btn3">
+                    <button
+                        onclick='alert("IP: trospysmp.cz")'
+                        class="btn3"
+                        title="ip adresa"
+                    >
                         <i class="fas fa-location-arrow"></i> IP
                     </button>
                     <a
                         title="Generátor pre whitelist na TrospySMP"
                         href="whitelist.html"
-                        ><button class="btn4">
+                        ><button class="btn4" title="whitelist generator">
                             <i class="fas fa-plus-circle"></i> Whitelist
                             Generator
                         </button></a
@@ -106,7 +110,7 @@
                         <h2>Čo je trospysmp?</h2>
                         <p>
                             TrospySMP je minecraftový survival SMP server.
-                            TrospySMP beží na najnovšej FiveM verzrzii 1.18 a
+                            TrospySMP beží na najnovšej FiveM verzrzii 1.19.1 a
                             taktiež vyuźíva funkciu LifeSteal (Hráči si môži
                             kradnúť srdcia a jedlo asi). Na TrospySMP hrá mnoho
                             YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a
@@ -174,14 +178,14 @@
                         <p>
                             Pokial ešte nesleduješ TrospySMP trospyho SMP
                             economy server na sociálnych sietiach tak robíš
-                            chybu!
+                            veľkú chybu!
                         </p>
                     </section>
                 </div>
             </article>
         </main>
         <footer>
-            <p>Trospysmp 1973 - 2020</p>
+            <p><%- footer %></p>
             <p class="credit">
                 Webstránky pripravil
                 <a
