--- a/cleni/trospy.html
+++ b/cleni/trospy.html
@@ -25,7 +25,7 @@
         <meta name="theme-color" content="<%- theme %>" />
         <link rel="stylesheet" href="/src/scss/style.scss" />
     </head>
-    <body>
+    <body class="trospy-profile">
         <header class="profile-head">
             <h1>Trospy</h1>
             <p>Trovo Kanál Trosapy</p>
