feat: trospy info

--- a/cleni/trospy.html
+++ b/cleni/trospy.html
@@ -30,7 +30,7 @@
             <h1>Trospy</h1>
             <p>Trovo Kanál Trosapy</p>
             <ul>
-                <li>Minecraft Nick:</li>
+                <li>Minecraft Nick: _ToggledTrospyy</li>
                 <li>Socialne siete:</li>
                 <ul>
                     <li>
@@ -90,6 +90,33 @@
                     Trospy je členom a zároveň menodržitelom TrospySMP do
                     nedávna bol na serveri aj Primátor kým ho Kráľ Hestreng
                     zosadil a ovládol tento terraria RPG server.
+                </p>
+                <br />
+                <h3>Ako sa trospy dostal k jeho nicku?</h3>
+                <p>
+                    K prezívke sa dostal tak, že sa mu zapáčilo meno Yeti, to si
+                    upravil a tak vznikla prezívka Trospy
+                </p>
+                <br />
+                <h3>Kto/čo je trospyho inšpiráciou?</h3>
+                <p>
+                    Jeho veľkov inšpiráciou je SirYakari alebo
+                    <a href="https://thepinkfongcompany.com"
+                        >The Pinkfong Company, Inc.</a
+                    >
+                </p>
+                <br />
+                <h3>Ako trospy odštartoval svoju youtube karieru?</h3>
+                <p>
+                    Založil si svoj youtube kanál 27. 12. 2019 a hneď v ten ďen
+                    vidal video "Vtipné momenty z eventu 100 hráčů. ft.
+                    SirYakari" po ktorom ďeň na to následovalo "Minecraft DROP
+                    EDIT (RUDE - Eternal Youth)"
+                </p>
+                <p>
+                    Svoju vimeo karíeru ale poriadne odštaroval až po výhre v
+                    SirYakari evente kde dal súboj zo svojím rovesníkom kubom a
+                    spravil si z chatu bilboard na svoj youtube kanál.
                 </p>
             </article>
         </main>
