--- a/index.html
+++ b/index.html
@@ -62,6 +62,28 @@
         </script>
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="index.html" title="domovska stranka">Domov</a></li>
+                <li>
+                    <a href="whitelist.html" title="blacklist generator"
+                        >Whitelist Generator</a
+                    >
+                </li>
+                <li>
+                    <a
+                        href="https://www.google.com/maps/place/Trospy+SMP/@48.6964001,21.2166386,18.5z/data=!4m5!3m4!1s0x473ee1bc387ee439:0x324dff701ba55b32!8m2!3d48.6965251!4d21.2222207?hl=sk-SK&shorturl=1"
+                        title="ako to unhacknem"
+                        >Hacknuta mapa</a
+                    >
+                </li>
+                <li>
+                    <a href="/cleni/index.html" title="vsetcli cleni trospysmp"
+                        >Členi</a
+                    >
+                </li>
+            </ul>
+        </nav>
         <header>
             <article class="head-text">
                 <h1 class="animate__animated animate__flip"><%- title %></h1>
