fix: navbar page links

--- a/cleni/index.html
+++ b/cleni/index.html
@@ -28,9 +28,11 @@
     <body>
         <nav>
             <ul>
-                <li><a href="index.html" title="domovska stranka">Domov</a></li>
                 <li>
-                    <a href="whitelist.html" title="blacklist generator"
+                    <a href="../index.html" title="domovska stranka">Domov</a>
+                </li>
+                <li>
+                    <a href="../whitelist.html" title="blacklist generator"
                         >Whitelist Generator</a
                     >
                 </li>
@@ -42,7 +44,9 @@
                     >
                 </li>
                 <li>
-                    <a href="/cleni/index.html" title="vsetcli cleni trospysmp"
+                    <a
+                        href="../cleni/index.html"
+                        title="vsetcli cleni trospysmp"
                         >Členi</a
                     >
                 </li>
