--- a/whitelist.html
+++ b/whitelist.html
@@ -26,12 +26,14 @@
         <link rel="stylesheet" href="/src/scss/style.scss" />
         <script type="module" src="/src/js/script.js"></script>
     </head>
-    <body>
+    <body class="sitemap">
         <nav>
             <ul>
-                <li><a href="index.html" title="domovska stranka">Domov</a></li>
                 <li>
-                    <a href="whitelist.html" title="blacklist generator"
+                    <a href="../index.html" title="domovska stranka">Domov</a>
+                </li>
+                <li>
+                    <a href="../whitelist.html" title="blacklist generator"
                         >Whitelist Generator</a
                     >
                 </li>
@@ -43,7 +45,9 @@
                     >
                 </li>
                 <li>
-                    <a href="/cleni/index.html" title="vsetcli cleni trospysmp"
+                    <a
+                        href="../cleni/index.html"
+                        title="vsetcli cleni trospysmp"
                         >Členi</a
                     >
                 </li>
