feat: sitemap footer link

--- a/404.html
+++ b/404.html
@@ -72,6 +72,7 @@
                 >
                 v inteligentnej samsung hladničke
             </p>
+            <a href="../sitemap.html" title="sitemap">Mapa Webu</a>
         </footer>
         <script
             async
