--- a/cleni/index.html
+++ b/cleni/index.html
@@ -159,6 +159,7 @@
                 >
                 v inteligentnej samsung hladničke
             </p>
+            <a href="../sitemap.html" title="sitemap">Mapa Webu</a>
         </footer>
         <script
             async
