--- a/cleni/trospy.html
+++ b/cleni/trospy.html
@@ -157,6 +157,7 @@
                 >
                 v inteligentnej samsung hladničke
             </p>
+            <a href="../sitemap.html" title="sitemap">Mapa Webu</a>
         </footer>
         <script
             async
