--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                 >
                 v inteligentnej samsung hladničke
             </p>
+            <a href="../sitemap.html" title="sitemap">Mapa Webu</a>
         </footer>
         <script
             async
