feat: trospy schema markup

--- a/cleni/trospy.html
+++ b/cleni/trospy.html
@@ -24,6 +24,55 @@
         <meta property="twitter:image" content="<%- card_image %>" />
         <meta name="theme-color" content="<%- theme %>" />
         <link rel="stylesheet" href="/src/scss/style.scss" />
+
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "FAQPage",
+                "mainEntity": [
+                    {
+                        "@type": "Question",
+                        "name": "Čo ten Trsorpy vôbec je?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "Trospy sa zameruje na hru GTA ktorú streamuje na svoj Twitch účet linknutý hore. Trospy disponuje širokým sortimentom videí od Moji Kamarádi Mě UVĚZNILI po Trospy - VESMÍRNÉ UFO (Official Minecraft Video) alebo Trospy si našel HOLKU. Taktiež, trospy aka trospy19 má rád svojích plišákov róberta a magdalénu."
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "Čo trospy a trospysmp?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "Trospy je členom a zároveň menodržitelom TrospySMP do nedávna bol na serveri aj Primátor kým ho Kráľ Hestreng zosadil a ovládol tento terraria RPG server."
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "Ako sa trospy dostal k jeho nicku?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "K prezívke sa dostal tak, že sa mu zapáčilo meno Yeti, to si upravil a tak vznikla prezívka Trospy"
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "Kto/čo je trospyho inšpiráciou?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "Jeho veľkov inšpiráciou je SirYakari"
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "Ako trospy odštartoval svoju youtube karieru?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "Založil si svoj youtube kanál 27. 12. 2019 a hneď v ten ďen vidal video \"Vtipné momenty z eventu 100 hráčů. ft. SirYakari\" po ktorom ďeň na to následovalo \"Minecraft DROP EDIT (RUDE - Eternal Youth)\" Svoju vimeo karíeru ale poriadne odštaroval až po výhre v SirYakari evente kde dal súboj zo svojím rovesníkom kubom a spravil si z chatu bilboard na svoj youtube kanál."
+                        }
+                    }
+                ]
+            }
+        </script>
     </head>
     <body class="trospy-profile">
         <nav>
