feat: trospy faq otazka

--- a/cleni/trospy.html
+++ b/cleni/trospy.html
@@ -15,6 +15,7 @@
         <meta property="og:title" content="<%- title %>" />
         <meta property="og:description" content="<%- description %>" />
         <meta property="og:image" content="<%- card_image %>" />
+        <link rel="icon" href="/src/images/trospysmp.ico" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
@@ -22,6 +23,8 @@
         <meta property="twitter:title" content="<%- title %>" />
         <meta property="twitter:description" content="<%- description %>" />
         <meta property="twitter:image" content="<%- card_image %>" />
+        <meta name="twitter:site" content="@trospysmp" />
+        <meta name="twitter:creator" content="@trospysmp" />
         <meta name="theme-color" content="<%- theme %>" />
         <link rel="stylesheet" href="/src/scss/style.scss" />
 
@@ -68,6 +71,14 @@
                         "acceptedAnswer": {
                             "@type": "Answer",
                             "text": "Založil si svoj youtube kanál 27. 12. 2019 a hneď v ten ďen vidal video \"Vtipné momenty z eventu 100 hráčů. ft. SirYakari\" po ktorom ďeň na to následovalo \"Minecraft DROP EDIT (RUDE - Eternal Youth)\" Svoju vimeo karíeru ale poriadne odštaroval až po výhre v SirYakari evente kde dal súboj zo svojím rovesníkom kubom a spravil si z chatu bilboard na svoj youtube kanál."
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "Čo trospyho motivovalo k založeniu trospysmp?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "Trospy bol odmietnutý na mineceravotvý server MAJNR 2 z čoho bol veľmi sklamaný preto sa rozhodol založiť si smp s inšpiráciou z dalšieho populárneho serveru a to Echocraft"
                         }
                     }
                 ]
@@ -165,6 +176,13 @@
                     Trospy je členom a zároveň menodržitelom TrospySMP do
                     nedávna bol na serveri aj Primátor kým ho Kráľ Hestreng
                     zosadil a ovládol tento terraria RPG server.
+                </p>
+                <br />
+                <h3>Čo trospyho motivovalo k založeniu trospysmp?</h3>
+                <p>
+                    Trospy bol odmietnutý na mineceravotvý server MAJNR 2 z čoho
+                    bol veľmi sklamaný preto sa rozhodol založiť si smp s
+                    inšpiráciou z dalšieho populárneho serveru a to Echocraft
                 </p>
                 <br />
                 <h3>Ako sa trospy dostal k jeho nicku?</h3>
