feat: head tags update

--- a/whitelist.html
+++ b/whitelist.html
@@ -15,6 +15,7 @@
         <meta property="og:title" content="<%- title %>" />
         <meta property="og:description" content="<%- description %>" />
         <meta property="og:image" content="<%- card_image %>" />
+        <link rel="icon" href="/src/images/trospysmp.ico" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
@@ -22,6 +23,8 @@
         <meta property="twitter:title" content="<%- title %>" />
         <meta property="twitter:description" content="<%- description %>" />
         <meta property="twitter:image" content="<%- card_image %>" />
+        <meta name="twitter:site" content="@trospysmp" />
+        <meta name="twitter:creator" content="@trospysmp" />
         <meta name="theme-color" content="<%- theme %>" />
         <link rel="stylesheet" href="/src/scss/style.scss" />
         <script type="module" src="/src/js/script.js"></script>
