--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
                     >
                 </li>
                 <li>
-                    <a href="/cleni/index.html" title="vsetcli cleni trospysmp"
+                    <a href="/cleni/zoznam.html" title="vsetcli cleni trospysmp"
                         >Členi</a
                     >
                 </li>
