--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </li>
                 <li>
                     <a
-                        href="../cleni/index.html"
+                        href="../cleni/zoznam.html"
                         title="vsetcli cleni trospysmp"
                         >Členi</a
                     >
