--- a/public/cleni/trospy.html
+++ b/public/cleni/trospy.html
@@ -105,7 +105,7 @@
                 </li>
                 <li>
                     <a
-                        href="../cleni/index.html"
+                        href="../cleni/zoznam.html"
                         title="vsetcli cleni trospysmp"
                         >Členi</a
                     >
