--- a/sitemap.html
+++ b/sitemap.html
@@ -48,7 +48,7 @@
                 </li>
                 <li>
                     <a
-                        href="../cleni/index.html"
+                        href="../cleni/zoznam.html"
                         title="vsetcli cleni trospysmp"
                         >Členi</a
                     >
@@ -60,7 +60,7 @@
             <ul>
                 <li><a href="../index.html">Domov</a></li>
                 <li>
-                    <a href="../cleni/index.html">Cleni</a>
+                    <a href="../cleni/zoznam.html">Cleni</a>
                     <ul>
                         <li><a href="../cleni/trospy.html">Trospy</a></li>
                     </ul>
