--- a/whitelist.html
+++ b/whitelist.html
@@ -49,7 +49,7 @@
                 </li>
                 <li>
                     <a
-                        href="../cleni/index.html"
+                        href="../cleni/zoznam.html"
                         title="vsetcli cleni trospysmp"
                         >Členi</a
                     >
