--- a/sitemap.html
+++ b/sitemap.html
@@ -47,9 +47,7 @@
                     >
                 </li>
                 <li>
-                    <a
-                        href="../cleni/zoznam.html"
-                        title="vsetcli cleni trospysmp"
+                    <a href="../cleni.html" title="vsetcli cleni trospysmp"
                         >Členi</a
                     >
                 </li>
@@ -60,9 +58,9 @@
             <ul>
                 <li><a href="../index.html">Domov</a></li>
                 <li>
-                    <a href="../cleni/zoznam.html">Cleni</a>
+                    <a href="../cleni.html">Cleni</a>
                     <ul>
-                        <li><a href="../cleni/trospy.html">Trospy</a></li>
+                        <li><a href="../trospy.html">Trospy</a></li>
                     </ul>
                 </li>
                 <li>
