--- a/cleni.html
+++ b/cleni.html
@@ -47,9 +47,7 @@
                     >
                 </li>
                 <li>
-                    <a
-                        href="../cleni/zoznam.html"
-                        title="vsetcli cleni trospysmp"
+                    <a href="../cleni.html" title="vsetcli cleni trospysmp"
                         >Členi</a
                     >
                 </li>
