--- a/trospy.html
+++ b/trospy.html
@@ -104,9 +104,7 @@
                     >
                 </li>
                 <li>
-                    <a
-                        href="../cleni/zoznam.html"
-                        title="vsetcli cleni trospysmp"
+                    <a href="../cleni.html" title="vsetcli cleni trospysmp"
                         >Členi</a
                     >
                 </li>
