--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
         </nav>
         <section class="error">
             <div class="animate__animated animate__flip">
-                <h1>TAKETO STRANKI NEPOZNAM!!!! VRAZ SA DOMOV</h1>
+                <h1>TAKETO STRANKI NEPOZNAM!!! VRAZ SA DOMOV</h1>
                 <p>Nič tu nieje trospy to asi odniesol na inu planetu</p>
                 <a title="Generovať whitelist" href="index.html"
                     ><button class="btn4">
