fix: small problems

--- a/cleni.html
+++ b/cleni.html
@@ -47,7 +47,7 @@
                     >
                 </li>
                 <li>
-                    <a href="../cleni.html" title="vsetcli cleni trospysmp"
+                    <a href="../cleni.html" title="vsetci cleni trospysmp"
                         >Členi</a
                     >
                 </li>
@@ -91,10 +91,11 @@
                             </li>
                             <li>
                                 <span class="nick">Matej asi</span> - majtej
-                                alebo matew ten robi tejake trileri
+                                alebo matew ten robi tejake trileri squareFX
                             </li>
                             <li>
                                 <span class="nick">Xplayy</span> - ma rad evzena
+                                do nedávna obýval priestory trospyho sklepu
                             </li>
                             <li>
                                 <span class="nick">Diamant</span> - ten isiel do
