--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h1 class="animate__animated animate__flip"><%- title %></h1>
                 <p class="animate__animated animate__flip">
                     Najkvalitnejší
-                    <span class="server-type" id="server">GTA</span>
+                    <span class="server-type" id="server">FiveM</span>
                     Creative Roleplay server!
                 </p>
                 <section
