--- a/404.html
+++ b/404.html
@@ -54,14 +54,14 @@
         <section class="error">
             <div class="animate__animated animate__flip">
                 <h1>TAKETO STRANKI NEPOZNAM!!! VRAZ SA DOMOV</h1>
-                <p>Nič tu nieje trospy to asi odniesol na inu planetu</p>
+                <p>Nič tu nieje trospy to asi odniesol na inu planetu.</p>
                 <a title="Generovať whitelist" href="index.html"
                     ><button class="btn4">
                         <i class="fas fa-home"></i> DOMOV
                     </button></a
                 >
             </div>
-            <img src="/src/images/trospysakupe.png" alt="" />
+            <img src="/src/images/trospysakupe.png" alt="trospy pri sprche" />
         </section>
 
         <footer>
